[metadata]
name = leetcode_hooks
version = 0.1.0
description = Some out-of-the-box hooks for leetcode repo.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mortimerliu/leetcode-readme
author = Hongru Liu
author_email = hl3148@columbia.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    leetcode-readme = leetcode_hooks.leetcode_readme:main
    cleanup-files = leetcode_hooks.cleanup_files:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
